# uniconv

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SKETCH.md  install.ps1  install.sh  release.py  release.sh
.claude/commands/: convert.md  uniconv-help.md
.claude/skills/universal-converter/: SKILL.md
.github/workflows/: release.yml
cmake/: CompilerWarnings.cmake  FindVips.cmake
docs/: building.md  builtins.md  cli-reference.md  pipeline-syntax.md  plugins.md  target-identifier.md
include/uniconv/: export.h  plugin_api.h  version.h.in
plugins/examples/: README.md
plugins/examples/cpp/image-invert/: CMakeLists.txt  image_invert.cpp  plugin.json
plugins/examples/cpp/video-to-gif/: plugin.json  video_to_gif.cpp
plugins/examples/python/image-ascii/: ascii.py  plugin.json
plugins/examples/python/image-grayscale/: grayscale.py  plugin.json
src/: main.cpp
src/builtins/: clipboard.cpp  collect.cpp  tee.cpp  tee.h
src/cli/: parser.cpp  parser.h  pipeline_parser.cpp  pipeline_parser.h
src/cli/commands/: config_command.cpp  config_command.h  etl_command.cpp  etl_command.h  formats_command.cpp  formats_command.h  info_command.cpp  info_command.h  pipeline_command.cpp  pipeline_command.h  plugin_command.cpp  plugin_command.h  preset_command.cpp  preset_command.h  update_command.cpp  update_command.h
src/core/: config_manager.cpp  config_manager.h  dependency_checker.cpp  dependency_checker.h  dependency_installer.cpp  dependency_installer.h  engine.cpp  engine.h  execution_graph.cpp  execution_graph.h  installed_plugins.cpp  installed_plugins.h  pipeline.h  pipeline_executor.cpp  pipeline_executor.h  plugin_discovery.cpp  plugin_discovery.h  plugin_loader_cli.cpp  plugin_loader_cli.h  plugin_loader_native.cpp  plugin_loader_native.h  plugin_manager.cpp  plugin_manager.h  plugin_manifest.h  plugin_resolver.cpp  plugin_resolver.h  preset_manager.cpp  preset_manager.h  registry_client.cpp  registry_types.h  types.h  watcher.cpp  watcher.h
src/plugins/: image_transform.cpp  image_transform.h  plugin_interface.h
src/utils/: file_utils.cpp  file_utils.h  http_utils.cpp  http_utils.h  json_output.cpp  json_output.h  mime_detector.cpp  mime_detector.h  string_utils.cpp  string_utils.h  win_subprocess.h
tests/: CMakeLists.txt
tests/unit/: test_file_utils.cpp  test_installed_plugins.cpp  test_pipeline_parser.cpp  test_preset_manager.cpp  test_registry_types.cpp  test_string_utils.cpp  test_types.cpp
